update MAVEN_OPTS to build the openjdk-orb